--- a/about.css
+++ b/about.css
@@ -19,7 +19,7 @@
     margin-bottom: 3rem;
 }
 .about__section-titles p {
-    width: 28%;
+    width: 39%;
     font-size: 18px;
 }
 .about__section-btn-container {
@@ -41,4 +41,16 @@
     color: var(--white);
     font-size: 20px;
     pointer-events: none;
+}
+
+@media (max-width: 992px) {
+    .about__section-titles p {
+        width: 60%;
+    }
+    .about__section-titles p:first-child {
+        margin-bottom: 3rem;
+    }
+    .about__section-btn-container {
+        padding: 0.75rem 1.25rem;
+    }
 }
