--- a/contact.css
+++ b/contact.css
@@ -22,7 +22,6 @@
     border: none;
     height: 5rem;
     border-bottom: 1px solid #6c757d;
-
     outline: none;
     font-size: 22px;
 }
@@ -36,3 +35,15 @@
     border-radius: 5px;
     cursor: pointer;
 }
+@media (max-width: 992px) {
+.contact__section h2 {
+    font-size: 2.5rem;
+}
+.contact__section-form button {
+    padding: 0.75rem 1.25rem;
+}
+.contact__section-form input,
+.contact__section-form textarea {
+    font-size: 20px;
+}
+ }
